update community profile details

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -129,14 +129,14 @@
                   alt="team" />
                 <!-- social icons -->
                 <div class="social-icons">
-                  <a href="https://www.linkedin.com/in/harshit-sharma-945i/"><span class="fa fa-linkedin"></span></a>
-                  <a href="https://github.com/me-harshit"><span class="fa fa-github"></span></a>
+                  <a href="https://www.linkedin.com/in/harshit9270/"><span class="fa fa-linkedin"></span></a>
+                  <a href="https://github.com/harshit9270"><span class="fa fa-github"></span></a>
                 </div>
                 <!-- social icons -->
               </div>
             </div>
             <div class="caption-text">
-              <a href="https://me-harshit.netlify.app" class="memberName">
+              <a href="https://harshit9270.me" class="memberName">
                 <h4>Harshit Sharma</h4>
               </a>
               <p>Web Developer</p>
@@ -152,7 +152,7 @@
                   alt="team" />
                 <!-- social icons -->
                 <div class="social-icons">
-                  <a href="https://www.linkedin.com/in/aman-dixit-b371b9190/"><span class="fa fa-linkedin"></span></a>
+                  <a href="https://www.linkedin.com/in/aman123956/"><span class="fa fa-linkedin"></span></a>
                   <a href="https://github.com/AMAN123956"><span class="fa fa-github"></span></a>
 
                 </div>
@@ -176,7 +176,7 @@
                   alt="team" />
                 <!-- social icons -->
                 <div class="social-icons">
-                  <a href="https://www.linkedin.com/in/sujal-gupta-776ba9190/"><span class="fa fa-linkedin"></span></a>
+                  <a href="https://www.linkedin.com/in/heysujal/"><span class="fa fa-linkedin"></span></a>
                   <a href="https://github.com/heysujal"><span class="fa fa-github"></span></a>
 
                 </div>
@@ -184,7 +184,7 @@
               </div>
             </div>
             <div class="caption-text">
-              <a href="https://heysujal.github.io/portfolio/" class="memberName">
+              <a href="https://heysujal.netlify.app/" class="memberName">
                 <h4>Sujal Gupta</h4>
               </a>
               <p>Web Developer</p>
