--- a/views/contribute.ejs
+++ b/views/contribute.ejs
@@ -256,11 +256,11 @@
     </div>
 
 
-    <div style="text-align: center;margin: 75px 0;">
+    <!-- <div style="text-align: center;margin: 75px 0;">
       <p style="font-size: 1.2rem;">Have a look on others contributions as well.</p>
 
       <a href="/usercontributions" class="ui inverted violet button">See Contributions</a>
-    </div>
+    </div> -->
 
   </div>
 
