--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -70,25 +70,44 @@
   }
 
   /* Profile Page */
+
   .container1{
-    border:4px solid red;
-    box-shadow: 4px 4px 2px 2px #7510F7;
-    width:60%;
-    margin-left:auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom:40px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #f8f8fa;
+  }
+
+  #leftSection{
+    background-color: #fff;
+    border-radius: 4px;
+    margin: 30px;
+    margin-right: 0;
+    width:50%;
     padding:20px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
+
+  #rightSection{
+    background-color: #fff;
+    border-radius: 4px;
+    margin: 30px;
+    width:50%;
+    padding:20px 30px;
+  }
+
+  #notCommUser{
+    text-align: center;
+  }
+
   .container2{
   /*  border:2px solid red; */
     margin-top: 40px;
     padding:10px;
-    width:80%;
+    width:100%;
   }
   .user-img{
    /* border:2px solid blue; */
@@ -100,36 +119,50 @@
     width:30%;
     border-radius: 100%;
   }
+  .user-text{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-evenly;
+  }
   #profile-name{
-    font-size:4rem;
+    font-size: 1.25rem;
     font-family:monospace;
     color:#7510f7;
-    margin-bottom: 50px;
+    margin: 0px;
   }
   #email-name{
-    font-size:2.6rem;
+    font-size: 1.25rem;
+    font-family:monospace;
+    margin: 0px;
   }
   /* Liked Posts Section */
   .container3{
     margin-top:40px;
    /* border:2px solid yellow; */
-    padding:10px;
-    width:60%;
+    padding: 60px;
+    width: 100%;
   }
   #liked-post-heading{
-    font-size:2.7rem;
+    font-size: 1.5rem;
     font-family:sans-serif;
-    text-align: center;
+    /* text-align: center; */
 }
+
+  #rightSection img{
+    display: block;
+    margin: auto;
+    width: 40%;
+    height: auto;
+  }
 
 
 
 /* Responsiveness Code */
 @media screen and (max-width:768px){
-  .container1{
+  /* .container1{
     width:100%;
     border:none;
-  }
+  } */
   .container2{
     width:100%;
   }
