--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -171,12 +171,12 @@
       </div> -->
 </div>
 
-<div style="display:block;width:50%;padding:10px;text-align: center;margin: 75px auto;margin-top: 120px;">
+<!-- <div style="display:block;width:50%;padding:10px;text-align: center;margin: 75px auto;margin-top: 120px;">
   <p style="font-size:1.5rem;color:#5e6f64">Have a look on others contributions as well.</p>
   <a href="/usercontributions" class="ui right labeled icon button" style="font-size:1.2rem;text-align:center;">See Contributions
     <i class="eye icon"></i>
   </a>
-</div>
+</div> -->
 <!-- Footer -->
 <%- include("footer") %>
 
