change meta tag url

--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -14,7 +14,7 @@
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
     <meta property="og:site_name" content="Jssconnect" />
     <!-- website name -->
-    <meta property="og:site" content="https://jssconnect.cyclic.app/" />
+    <meta property="og:site" content="https://jssconnect.onrender.com/" />
     <!-- website link -->
     <meta property="og:title" content="" />
     <!-- title shown in the actual shared post -->
