Add more subjects
Signed-off-by: Sujal <sujalgupta6100@gmail.com>

--- a/views/contribute.ejs
+++ b/views/contribute.ejs
@@ -208,9 +208,14 @@
             <option value="M2">Maths II</option>
             <option value="P">Physics</option>
             <option value="C">Chemistry</option>
+            <option value="AIE">AI For Engineering</option>
+            <option value="ETE">Emerging Technology for
+              Engineering </option>
+            <option value="FMEM">Fundamentals of <Mec></Mec>hanical Engineering & Mechatronics</option>
+            <option value="EDEE">Emerging Domain in Electronics
+              Engineering</option>
 
             <option value="" disabled>Second Year</option>
-            <option value="" disabled>3rd Sem</option>
             <option value="DS">Data Structures</option>
             <option value="DSTL">Discrete Structures and Theory of Logic</option>
             <option value="ES">Engineering Science</option>
@@ -220,12 +225,25 @@
             <option value="PP">Python Programming</option>
             <option value="M4">Maths IV</option>
             <option value="UHV">Universal Human Values</option>
-            <option value="" disabled>4th Sem</option>
             <option value="OS">Operating Systems</option>
             <option value="TAFL">Theory of automata and Formal Languages</option>
             <option value="FL">Formal Languages</option>
             <option value="WD">Web Designing</option>
-          </select>
+
+            <option value="" disabled>Third Year</option>       
+            <option value="DBMS">Database Management System</option>
+            <option value="WT">Web Technology</option>
+            <option value="ITCS">Indian Tradition, culture and society</option>
+            <option value="HCI">Human Computer Interface</option>
+            <option value="OOSD">Object Oriented System Design</option>
+            <option value="DAA">Design and Analysis of Algorithm</option>
+            <option value="SE">Software Engineering</option>
+            <option value="DA">Data Analytics</option>
+            <option value="CN">Computer Networks</option>
+            <option value="BAD">Blockchain Architecture Design</option>
+            <option value="SPM">Software Project Management</option>
+            <option value="COE">Constitution of India, Law and Engineering</option>
+       </select>
         </div>
         <div class="field">
           <label>Link to Resource (i.e. Google Drive pdf)</label>
