--- a/views/header.ejs
+++ b/views/header.ejs
@@ -99,7 +99,7 @@
           Contribute
         </a>
         <div class="ui dropdown">
-          <a id="userLabel" style="height: fit-content;margin: 6px 10px;" class="ui basic image big label">
+          <a id="userLabel" style="height: fit-content;margin: 6px 10px; border: none;" class="ui basic image big label">
             <img src=<%=picture %> />
             <%= username %>
               <i class="dropdown icon" style="margin-left: 10px; margin-right: 0"></i>
@@ -147,7 +147,7 @@
           Contribute
         </a>
         <div class="ui dropdown">
-          <a id="userLabel" style="height: fit-content;margin: 6px 10px;" class="ui basic image big label">
+          <a id="userLabel" style="height: fit-content;margin: 6px 10px; border: none;" class="ui basic image big label">
             <img src=<%=picture %> />
             <%= username %>
               <i class="dropdown icon" style="margin-left: 10px; margin-right: 0"></i>
@@ -172,7 +172,7 @@
       <a class="item" href="/community">Community</a>
       <a class="item" href="/contribute">Contribute</a>
       <div class="ui dropdown">
-        <a id="userLabel" style="height: fit-content;margin: 6px 10px;" class="ui basic image big label">
+        <a id="userLabel" style="height: fit-content;margin: 6px 10px; border: none;" class="ui basic image big label">
           <img src=<%=picture %> />
           <%= username %>
             <i class="dropdown icon" style="margin-left: 10px; margin-right: 0"></i>
